fixing dropdown alignament #3555

--- a/ckanext-hdx_theme/ckanext/hdx_theme/less/search/list-header-search.less
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/less/search/list-header-search.less
@@ -181,7 +181,7 @@
         }
         label {
           margin: 2px 0;
-          width: 170px;
+          width: 165px;
           font-size: 12px;
           font-weight: 400;
           &:after {
